# rust-kafka-threadpool

./: Cargo.toml  README.md
examples/: get-all-metadata.rs  get-metadata-for-topic.rs  start-threadpool.rs
src/: kafka_publisher.rs  lib.rs  start_threadpool.rs  thread_process_messages_handler.rs
src/api/: add_messages_to_locked_work_vec.rs  build_kafka_client_config.rs  build_kafka_publish_message.rs  drain_messages_from_locked_work_vec.rs  get_kafka_consumer.rs  get_kafka_producer.rs  kafka_publish_message.rs  kafka_publish_message_type.rs  mod.rs
src/config/: kafka_client_config.rs  mod.rs
src/metadata/: get_kafka_metadata.rs  mod.rs
src/msg/: mod.rs  publish_message.rs
src/pool/: mod.rs  start_threads_from_config.rs
